# piOS

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md  fix.patch  lib.long-type-10694696592420833670.txt  lib.long-type-13923343376585684499.txt  lib.long-type-15692165801912855087.txt  lib.long-type-320751101917379170.txt  lib.long-type-3848398080607093459.txt  lib.long-type-5662186129700737158.txt  liblib.rlib  patch.diff  patch.sh  patch2.diff  patch3.diff  patch4.diff  patch_ci.py  patch_wasi_crypto.sh  patch_xhci_rust.sh  report1.md  report2.md  report3.md  sync.long-type-17848318033380395408.txt  test.sh  test_crypto.rs  test_mtools.sh  test_script.sh  test_tracing.rs  test_verus.sh  test_wasi.wat  todo.md  todo_1_core_boot_drivers.md  todo_2_userland_network.md  todo_3_ai_autopoiesis_polish.md  update_todo.py  Разработка Саморазвивающейся ОС с ИИ.rtf
.github/workflows/: ci.yml
docs/: README.md  ai_integration.md  architecture.md  user_space.md  verus_verification.md
kernel/: Cargo.toml
kernel/src/: acpi.rs  ahci.rs  allocator.rs  arch.rs  boot.rs  dma.rs  ehci.rs  gpu.rs  input.rs  interrupts.rs  ipc.rs  lib.rs  main.rs  nvme.rs  paging.rs  panic.rs  pci.rs  pmm.rs  power.rs  scheduler.rs  sound.rs  sync.rs  telemetry.rs  thread.rs  usb.rs  usb_hub.rs  verifier.rs  virtio_blk.rs  virtio_gpu.rs  virtio_net.rs  wifi.rs  xhci.rs
kernel/src/arch/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
kernel/src/blue_green/: mod.rs  std_impl.rs  verus_impl.rs
kernel/src/capabilities/: mod.rs
kernel/src/co_generation/: std_impl.rs  verus_impl.rs
kernel/src/driver_pipeline/: std_impl.rs  verus_impl.rs
kernel/src/guardrails/: mod.rs
kernel/src/hot_reload/: mod.rs  std_impl.rs  verus_impl.rs
kernel/src/vfs/: btrfs.rs  ext4.rs  fat32.rs  mod.rs  semantic.rs  zfs.rs
kernel/src/wasm/: linker.rs  mod.rs  runtime.rs  sandbox.rs  secure_boot.rs  wasi.rs  wasi_crypto.rs  wasi_nn.rs
libs/compiler_backend/: Cargo.toml
libs/compiler_frontend/: Cargo.toml
libs/compiler_frontend/src/: ast.rs  lib.rs  mir.rs
libs/inference_runtime/: Cargo.toml
libs/inference_runtime/src/: lib.rs
libs/libc_compat/: Cargo.toml
libs/libc_compat/src/: lib.rs
libs/llm_context/: Cargo.toml
libs/llm_context/src/: lib.rs  prompts.rs
libs/pios-api/: Cargo.toml
libs/pios-api/src/: lib.rs
libs/pios-api/src/a2a/: mod.rs  priority.rs  protocol.rs
libs/pios-api/src/mcp/: protocol.rs
libs/pios-common/: Cargo.toml
libs/pios-common/src/: lib.rs
libs/vector_db/: Cargo.toml
libs/vector_db/src/: lib.rs
libs/z3_smt/: Cargo.toml
libs/z3_smt/src/: lib.rs
memo/: mapping.md
test_wasi/: Cargo.toml
test_wasi/src/: lib.rs
todo/: Phase_0_Project_Structure.md  Phase_1_Verified_Microkernel.md  Phase_2_WASM_User_Space.md  Phase_3_AI_Native_Subsystems.md  Phase_4_Autopoiesis.md  Phase_5_User_Experience.md  Risks_and_Resources.md
tools/: build_kernel.sh  fuzz_drivers.sh  generate_fv_coverage.sh  install_deps.sh  install_verus.sh  mkimage.sh  run_qemu_test.sh  setup_verus.sh  stress_test.sh  test_mkimage.sh  verify_kernel.sh
tools/builder/src/: main.rs
tools/fuzzer/: Cargo.toml
tools/fuzzer/fuzz/: Cargo.toml
tools/fuzzer/src/: main.rs
userland/applications/hello_world/: Cargo.toml
userland/applications/hello_world/src/: lib.rs  main.rs
userland/applications/pkg_cli/: Cargo.toml
userland/applications/pkg_cli/src/: lib.rs  main.rs
userland/services/init/: Cargo.toml
userland/services/init/src/: lib.rs
userland/services/installer/: Cargo.toml
userland/services/installer/src/: lib.rs  main.rs
userland/services/net_stack/: Cargo.toml
userland/services/net_stack/src/: lib.rs  shadowsocks_vpn.rs
userland/services/nl_sh/: Cargo.toml
userland/services/nl_sh/src/: lib.rs
userland/services/package_manager/: Cargo.toml
userland/services/package_manager/src/: lib.rs  lib.rs.orig
userland/services/slint_gui/: Cargo.toml
userland/services/slint_gui/src/: lib.rs
userland/services/slint_gui/ui/: appwindow.slint
userland/services/wgpu_compositor/: Cargo.toml
userland/services/wgpu_compositor/src/: lib.rs
