[workspace]
members = [
    "kernel",
    "libs/pios-common",
    "libs/pios-api",
    "tools/builder"
, "test_wasi", "libs/vector_db", "libs/llm_context", "libs/inference_runtime"]
exclude = [
    "tools/verus"
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)', 'cfg(verus_verify_core)'] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"
