[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.28.0", default-features = false, features = ["alloc"] }
uefi-services = { version = "0.25.0", default-features = false }
log = "0.4.20"
verus_builtin = { path = "../tools/verus/verus-x86-linux/builtin", optional = true }
verus_builtin_macros = { path = "../tools/verus/verus-x86-linux/builtin_macros", optional = true }
verus_state_machines_macros = { path = "../tools/verus/verus-x86-linux/state_machines_macros", optional = true }
vstd = { path = "../tools/verus/verus-x86-linux/vstd", default-features = false, features = ["alloc"], optional = true }
wasmi = { version = "1.0.9", default-features = false }
inference_runtime = { path = "../libs/inference_runtime" }
vector_db = { path = "../libs/vector_db" }

[lib]
name = "kernel"
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false

[features]
default = []
verus = ["dep:verus_builtin", "dep:verus_builtin_macros", "dep:verus_state_machines_macros", "dep:vstd"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dev-dependencies]
wat = "1.245.1"
