[package]
name = "compiler_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift-codegen = { version = "0.106.0", default-features = false, features = ["core", "x86"] }
cranelift-frontend = { version = "0.106.0", default-features = false, features = ["core"] }
cranelift-module = { version = "0.106.0", default-features = false, features = ["core"] }
cranelift-native = { version = "0.106.0", default-features = false, features = ["core"] }
hashbrown = "0.14"

[patch.crates-io]
cranelift-codegen = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v19.0.0" }
cranelift-frontend = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v19.0.0" }
cranelift-module = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v19.0.0" }
cranelift-native = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v19.0.0" }
