[package]
name = "net_stack"
version = "0.1.0"
edition = "2021"

[dependencies]
smoltcp = { version = "0.11.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "socket-icmp"] }
log = "0.4.20"
verus_builtin = { path = "../../../tools/verus/verus-x86-linux/builtin", optional = true }
verus_builtin_macros = { path = "../../../tools/verus/verus-x86-linux/builtin_macros", optional = true }
verus_state_machines_macros = { path = "../../../tools/verus/verus-x86-linux/state_machines_macros", optional = true }
vstd = { path = "../../../tools/verus/verus-x86-linux/vstd", default-features = false, features = ["alloc"], optional = true }


[features]
verus = ["dep:verus_builtin", "dep:verus_builtin_macros", "dep:verus_state_machines_macros", "dep:vstd"]

[lints]
workspace = true
